Fixed small array out of bounds errore. Modified README.md